fixed search button from squishing on short devices

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -961,6 +961,7 @@
 
     .photo-search-btn {
       margin-top: 9.5px;
+      min-height: 31px;
     }
   };
 
